// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectors -> nodes -> > Tree actions > deleteNodeFromTree > when a node is deleted, should delete that node and all children nodes 1`] = `
[
  {
    "children": [
      {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "id": 0,
    "name": "Leaf 1",
    "state": {
      "expanded": true,
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "id": 7,
            "name": "Leaf 8",
          },
          {
            "id": 8,
            "name": "Leaf 9",
          },
        ],
        "id": 6,
        "name": "Leaf 7",
        "state": {
          "expanded": false,
        },
      },
      {
        "id": 9,
        "name": "Leaf 10",
      },
    ],
    "id": 1,
    "name": "Leaf 6",
    "state": {
      "deletable": true,
      "expanded": false,
    },
  },
  {
    "id": "z",
    "name": "Leaf z",
    "state": {
      "deletable": true,
      "favorite": true,
    },
  },
]
`;

exports[`selectors -> nodes -> > Tree actions > deleteNodeFromTree > when root node is deleted, should delete that node and all children nodes 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "id": 7,
            "name": "Leaf 8",
          },
          {
            "id": 8,
            "name": "Leaf 9",
          },
        ],
        "id": 6,
        "name": "Leaf 7",
        "state": {
          "expanded": false,
        },
      },
      {
        "id": 9,
        "name": "Leaf 10",
      },
    ],
    "id": 1,
    "name": "Leaf 6",
    "state": {
      "deletable": true,
      "expanded": false,
    },
  },
  {
    "id": "z",
    "name": "Leaf z",
    "state": {
      "deletable": true,
      "favorite": true,
    },
  },
]
`;

exports[`selectors -> nodes -> > Tree actions > replaceNodeFromTree should replace a node in the tree without mutations 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "id": "c-3",
                "name": "Leaf 3 Child",
                "state": {},
              },
            ],
            "id": 3,
            "name": "Leaf 3",
            "state": {
              "deletable": true,
              "expanded": false,
              "favorite": true,
            },
          },
          {
            "id": 4,
            "name": "Leaf 4",
          },
        ],
        "id": 2,
        "name": "Leaf 2",
        "state": {
          "deletable": true,
          "expanded": true,
        },
      },
      {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "id": 0,
    "name": "Leaf 1",
    "state": {
      "expanded": false,
      "favorite": true,
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "id": 7,
            "name": "Leaf 8",
          },
          {
            "id": 8,
            "name": "Leaf 9",
          },
        ],
        "id": 6,
        "name": "Leaf 7",
        "state": {
          "expanded": false,
        },
      },
      {
        "id": 9,
        "name": "Leaf 10",
      },
    ],
    "id": 1,
    "name": "Leaf 6",
    "state": {
      "deletable": true,
      "expanded": false,
    },
  },
  {
    "id": "z",
    "name": "Leaf z",
    "state": {
      "deletable": true,
      "favorite": true,
    },
  },
]
`;

exports[`selectors -> nodes -> > getNodeRenderOptions > should extract state from nodes correctly when there are children 1`] = `
{
  "hasChildren": true,
  "isDeletable": true,
  "isExpanded": false,
  "isFavorite": false,
}
`;

exports[`selectors -> nodes -> > getNodeRenderOptions > should extract state from nodes correctly when there are no children 1`] = `
{
  "hasChildren": false,
  "isDeletable": false,
  "isExpanded": true,
  "isFavorite": true,
}
`;

exports[`selectors -> nodes -> > getNodeRenderOptions > should extract state from nodes correctly when there is no state 1`] = `
{
  "hasChildren": true,
  "isDeletable": false,
  "isExpanded": false,
  "isFavorite": false,
}
`;

exports[`selectors -> nodes -> > single node actions > addNode should create the expected object 1`] = `
{
  "node": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "id": "c-3",
                "name": "Leaf 3 Child",
                "state": {},
              },
            ],
            "id": 3,
            "name": "Leaf 3",
            "state": {
              "deletable": true,
              "expanded": false,
              "favorite": true,
            },
          },
          {
            "id": 4,
            "name": "Leaf 4",
          },
        ],
        "id": 2,
        "name": "Leaf 2",
        "state": {
          "deletable": true,
          "expanded": true,
        },
      },
      {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "deepness": 0,
    "id": 0,
    "name": "Leaf 1",
    "parents": [],
    "state": {
      "expanded": true,
    },
  },
  "type": 0,
}
`;

exports[`selectors -> nodes -> > single node actions > deleteNode should create the expected object 1`] = `
{
  "node": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "id": "c-3",
                "name": "Leaf 3 Child",
                "state": {},
              },
            ],
            "id": 3,
            "name": "Leaf 3",
            "state": {
              "deletable": true,
              "expanded": false,
              "favorite": true,
            },
          },
          {
            "id": 4,
            "name": "Leaf 4",
          },
        ],
        "id": 2,
        "name": "Leaf 2",
        "state": {
          "deletable": true,
          "expanded": true,
        },
      },
      {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "deepness": 0,
    "id": 0,
    "name": "Leaf 1",
    "parents": [],
    "state": {
      "expanded": true,
    },
  },
  "type": 1,
}
`;

exports[`selectors -> nodes -> > single node actions > updateNode should update the supplied node state without mutations 1`] = `
{
  "node": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "id": "c-3",
                "name": "Leaf 3 Child",
                "state": {},
              },
            ],
            "id": 3,
            "name": "Leaf 3",
            "state": {
              "deletable": true,
              "expanded": false,
              "favorite": true,
            },
          },
          {
            "id": 4,
            "name": "Leaf 4",
          },
        ],
        "id": 2,
        "name": "Leaf 2",
        "state": {
          "deletable": true,
          "expanded": true,
        },
      },
      {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "deepness": 0,
    "id": 0,
    "name": "Leaf 1",
    "parents": [],
    "state": {
      "expanded": false,
      "favorite": true,
    },
  },
  "type": 2,
}
`;
